--- a/SatouEdu.API/appsettings.json
+++ b/SatouEdu.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=LMS_Db;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
